--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,4 +50,36 @@
     <string name="choose_address">选择收货地址</string>
     <string name="title_activity_pi_pei_list">PiPeiListActivity</string>
     <string name="pipei_result">匹配结果</string>
+    <string name="title_activity_login">LoginActivity</string>
+    <string name="login">登录</string>
+    <string name="register">注册</string>
+    <string name="inputName">请输入帐号</string>
+    <string name="inputPassword">请输入密码</string>
+    <string name="inputPhone">请输入手机号</string>
+    <string name="yanzhengNum">输入验证码</string>
+    <string name="msgLogin">短信验证码登录</string>
+    <string name="getyanzheng">获取验证码</string>
+    <string name="forgetPassword">忘记密码</string>
+    <string name="title_activity_register">RegisterActivity</string>
+    <string name="backs">返回</string>
+    <string name="title_activity_msg_login">MsgLoginActivity</string>
+    <string name="title_activity_forget_code">ForgetCodeActivity</string>
+    <string name="title_activity_set_new_code">SetNewCodeActivity</string>
+    <string name="edit_code">修改密码</string>
+    <string name="inputNewCode">输入新密码</string>
+    <string name="inputConfirmCode">确认密码</string>
+    <string name="title_activity_good_detail">GoodDetailActivity</string>
+    <string name="goodDetails">商品详情</string>
+    <string name="decian">宝路品牌  放心购买  值得信赖  富含各种微量元素  宠物零食 </string>
+    <string name="youhui">火爆销售中，速来抢购吧</string>
+    <string name="saledNum">已售</string>
+    <string name="yuanjia">原价</string>
+    <string name="guige">商品规格</string>
+    <string name="pinpai">品牌</string>
+    <string name="chanpinguige">产品规格</string>
+    <string name="productDate">生产日期</string>
+    <string name="baozhiDate">保质期</string>
+    <string name="dingyue">订阅</string>
+    <string name="buy_now">立即购买</string>
+    
 </resources>
