--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -81,5 +81,8 @@
     <string name="baozhiDate">保质期</string>
     <string name="dingyue">订阅</string>
     <string name="buy_now">立即购买</string>
-    
+    <string name="title_activity_deal_order">DealOrderActivity</string>
+    <string name="title_activity_confirm_order">ConfirmOrderActivity</string>
+    <string name="title_activity_pet_list_search">PetListSearchActivity</string>
+
 </resources>
