--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -121,5 +121,6 @@
     <string name="title_activity_assessing">AssessingActivity</string>
     <string name="title_activity_customer_back">CustomerBackActivity</string>
     <string name="title_activity_help">HelpActivity</string>
+    <string name="title_activity_all_order">AllOrderActivity</string>
 
 </resources>
